crates/terminal-core/tests/snapshots/golden__clear_screen.snap
---
source: crates/terminal-core/tests/golden.rs
expression: "format!(\"BEFORE:\\n{before}\\nAFTER:\\n{after}\")"
---
BEFORE:
line1
line2
line3

AFTER:
