crates/terminal-core/tests/snapshots/golden__sgr_256_color.snap
---
source: crates/terminal-core/tests/golden.rs
expression: render_styled(&e)
---
(0,0) "X" fg=Indexed(196) bg=Default flags=0b000000000
(0,1) "Y" fg=Indexed(196) bg=Indexed(21) flags=0b000000000
