crates/terminal-core/tests/snapshots/golden__sgr_attributes.snap
---
source: crates/terminal-core/tests/golden.rs
expression: render_styled(&e)
---
(0,0) "B" fg=Default bg=Default flags=0b000000001
(0,1) "I" fg=Default bg=Default flags=0b000000010
(0,2) "U" fg=Default bg=Default flags=0b000000100
(0,3) "R" fg=Default bg=Default flags=0b000001000
