crates/terminal-core/tests/snapshots/golden__wrapping_plain_text.snap
---
source: crates/terminal-core/tests/golden.rs
expression: "format!(\"{}\\nwrapped={:?}\", render_plain(&e), wrapped_flags)"
---
abcdefghij
klmnop



wrapped=[true, false, false, false]
